k8s/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      id: app
      type: canary
  template:
    metadata:
      labels:
        id: app
        type: canary
    spec:
      containers:
      - image: 903461563814.dkr.ecr.ap-south-1.amazonaws.com/istio-demo:v2
        name: app
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
