k8s/canary-deployment-manifest.yaml
# canary-deployment-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-v2
  namespace: canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
      version: v2
  template:
    metadata:
      labels:
        app: demoapp
        version: v2
    spec:
      containers:
      - image: 954678508118.dkr.ecr.ap-south-1.amazonaws.com/canary-istio-demo:v2
        imagePullPolicy: IfNotPresent
        name: demo-app-v2
        ports:
        - containerPort: 5000

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demo-app
  namespace: canary-deployment
spec:
  host: demoapp.canary-deployment.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp-virtualservice
  namespace: canary-deployment
spec:
  gateways:
    - demoapp-gateway
  hosts:
    - 'canary-deployment.test.cloudtechner.com'
  http:
    - route:
        - destination:
            host: demoapp.canary-deployment.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 100
        - destination:
            host: demoapp.canary-deployment.svc.cluster.local
            port:
              number: 80
            subset: v2
          weight: 0
